# poke

./: .gitignore  Cargo.toml  bacon.toml
poke-instrument/: Cargo.toml
poke-instrument/src/: lib.rs
poke-part1/: Cargo.toml  README.md
poke-part1/res/disassembly/: add_sign_extension  mov_immediate_accumulator
poke-part1/src/: main.rs
poke-part1/tests/: disassembly.rs  part1.rs
poke-part1/tests/common/: mod.rs
poke-part2/: Cargo.toml
poke-part2/src/: haversine.rs  haversine_json.rs  json.rs  lib.rs
res/: mov_all_kinds_of_displacements  mov_immediate_accumulator.asm
res/disassembly/: add_sign_extension.asm  mov_all_kinds_of_displacements.asm  mov_immediate_accumulator.asm
src/: i8086.rs  intel_8086.rs  lib.rs  main.rs
tests/: disassembly.rs  part1.rs
tests/common/: mod.rs
